--- a/GTS2/AndroidManifest.xml
+++ b/GTS2/AndroidManifest.xml
@@ -8,13 +8,17 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
 
+    <!-- Tell the system this app requires OpenGL ES 1.0 or higher -->
+    <uses-feature android:glEsVersion="0x00010000" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         <activity
             android:name="mytnyk.garretttheshadow.Run"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
