--- a/GarretTheShadow/AndroidManifest.xml
+++ b/GarretTheShadow/AndroidManifest.xml
@@ -8,20 +8,21 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
 
-    <!-- Tell the system this app requires OpenGL ES 1.0 or higher-->
+    <!-- Tell the system this app requires OpenGL ES 1.0 or higher -->
     <uses-feature android:glEsVersion="0x00010000" />
-    
+
     <application
-            android:icon="@drawable/ic_launcher"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-            android:allowBackup="true" >
+        android:allowBackup="true"
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         <activity
             android:name="ua.kiev.mytnyk.garrettheshadow.Run"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
